--- a/prgm.css
+++ b/prgm.css
@@ -14,6 +14,9 @@ body{
  background-color: #ba812e;
  color: #fff;
  border:#ba812e ;
+ /* padding-right: 60; */
+ padding: 12px 18px;
+margin: .618em .618em;
 }
 .def{
    font-family: psfournier-std-grand;
@@ -54,9 +57,22 @@ margin-left: 300px;
 border: 2px solid rgba(0,0,0,0);
 color: #fff;
 border:#ba812e ;
+margin-left: 250;
+/* padding: 1em 2.5em; */
+border: 2px solid
 }
 #one{
-   margin-left: 890px;
+    
+margin-top: 0px;
+
+ 
+width: 155%;
+height: 85%; 
+/* left: -0.0337453%;
+top: 0%;
+width: 100.068%;
+height: 100%;
+position: absolute; */
 }
 #pp{
    color: #fff;
@@ -97,10 +113,11 @@ font-size: 15px;
 }
 .ddd{
 
-font-family: proxima-nova;
+/* font-family: proxima-nova; */
 font-weight: 300;
 font-style: normal;
 font-size: 15px;
+font-family:  Calibri;
 }
 #obc{
    font-family: psfournier-std-grand;
@@ -178,6 +195,8 @@ margin-left: 600px;
    background-color:  #ba812e; 
   color: #fff;
   border:#ba812e ; 
+  text-align: center;
+  margin-left: 20;
 }
 .yuv{
    background-color:  #eaf0f0;
@@ -205,24 +224,38 @@ background-color:  #eaf0f0;
    background-color:  #eaf0f0;   
 }
 #nn{
-   width: 150;
+   width: 15%;
+   /* top: 0%;
+   margin-right: 7px; */
+   padding: 15.5px ;
+   background-color:#eaf0f0 ;
 }
+
 .oo{
-   background-color:  #eaf0f0; 
+
+   /* background-color:#eaf0f0 ; */
+
 }
 #uuu{
-   text-align: center;
+   /* text-align: left; */
    font-family: psfournier-std-grand;
 font-weight: 300;
 font-style: normal;
 font-size: 30px;
-margin-left: 9;
+margin-left: 355px;
+line-height: 1.2em;
+text-align:4%;
+margin-bottom: 10;
+padding-top: 10%;
 }
 #www{
    font-family: futura-pt;
 font-weight: 500;
 font-style: normal;
 font-size: 15px;
+ padding-left: 55; 
+ /* margin-left: 14%;  */
+ background-color:#eaf0f0 ;
 }
 /* #ee{
    background-color:#eaf0f0 ;
@@ -236,4 +269,19 @@ font-size: 15px;
 font-size: 30px;
 font-weight: 300;
 text-align: right,35%;
+}
+#jj{
+   font-weight: bold;
+}
+.eee{
+   color:  #ba812e;
+}
+#sss{
+   background-color:#eaf0f0 ;
+}
+#bb{
+font-weight:bold ;
+}
+#dd{
+   margin-left: 20;
 }
